--- a/resgistryservice/src/main/resources/application.properties
+++ b/resgistryservice/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.application.name=resgistry_service
+spring.application.name=resgistryservice
 
+server.port=9097
 spring.datasource.url=jdbc:mysql://localhost:3306/registration?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Prasql@123
